--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <footer>Made with ❤️ for the CapyCoin community</footer>
 
   <script>
-    const GAME_URL  = "build/web/index.html";
+    const GAME_URL  = "game/index.html";
     const playBtn   = document.getElementById("play");
     const gameArea  = document.getElementById("gameArea");
     const gameFrame = document.getElementById("gameFrame");
