--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>PixCapy — Leaderboard</title>
+  <title>Flappy Bara — Leaderboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <style>
     :root { --bg:#0f1220; --card:#171b2e; --ink:#e8ecff; --muted:#9aa3c7; --accent:#7cc8ff; }
@@ -52,25 +52,35 @@
     ul.lb li strong { font-variant-numeric: tabular-nums; }
 
     /* --- Game panel --- */
-    /* Center the game inside the card */
-.card.gameBox {
-  display: grid;           /* simpler than flex for centering one child */
-  place-items: center;     /* centers both horizontally & vertically */
-  min-height: 620px;
-}
+    .card.gameBox { display:grid; place-items:center; position:relative; padding:14px; }
+    /* DESKTOP: keep game at 420px wide (≈640px tall). MOBILE: scale down but never exceed 420px */
+    #gameFrame {
+      width: 420px;
+      max-width: 100%;
+      aspect-ratio: 21 / 32;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+      border: 1px solid #243055;
+      border-radius: 12px;
+      background: #000;
+    }
 
-/* Center the iframe and keep 420x640 proportion without stretching */
-#gameFrame {
-  width: clamp(420px, 50vw, 640px); /* <- raise this last number to go even bigger (e.g., 640) */
-  aspect-ratio: 21 / 32;   /* keep the original proportions */
-  height: auto;            /* let aspect-ratio control height */
-  display: block;
-  margin: 0 auto;          /* explicit horizontal centering */
-  border: 1px solid #243055;
-  border-radius: 12px;
-  background: #000;
-}
-    #gameFrame { width:100%; height:100%; display:block; border:0; }
+    /* Tap-to-start overlay that does NOT block pointer events (pass-through) */
+    .tapOverlay {
+      position:absolute; inset:12px;
+      display:none; place-items:center;
+      border-radius:12px;
+      border:1px dashed rgba(124,200,255,.55);
+      background:linear-gradient(180deg, rgba(8,14,28,.30), rgba(8,14,28,.10));
+      color:#dbe9ff;
+      font-weight:700;
+      text-shadow:0 1px 0 rgba(0,0,0,.5);
+      pointer-events:none;                /* let taps go through to the iframe */
+      transition: opacity .2s ease;
+    }
+    .tapOverlay.show { display:grid; }
+    .tapOverlay.fade { opacity:0; }
 
     .me { margin-top:6px; font-size:13px; color:var(--muted); }
 
@@ -78,22 +88,16 @@
     @media (max-width: 900px) {
       .wrap {
         grid-template-columns: 1fr;
-        grid-template-areas:
-          "right"  /* game first */
-          "left";  /* then auth + leaderboard */
+        grid-template-areas: "right" "left";
       }
-      .sidebar { position:static; max-height:none; }
+      #gameFrame { width: min(92vw, 420px); }
     }
-
-    /* (Optional) friendlier inputs on small screens */
-    @media (max-width: 480px) {
-      button, input { font-size:16px; }
-    }
+    @media (max-width: 480px) { button, input { font-size:16px; } }
   </style>
 </head>
 <body>
   <header>
-    <h1>PixCapy</h1>
+    <h1>Flappy Bara</h1>
     <span class="tag">scoreboard + game</span>
   </header>
 
@@ -123,9 +127,13 @@
 
     <!-- RIGHT: game -->
     <section class="card gameBox right">
-      <div class="game-frame">
-        <iframe id="gameFrame" title="PixCapy" allow="gamepad *; fullscreen *"></iframe>
+      <!-- pass-through overlay appears on touch devices -->
+      <div id="tapOverlay" class="tapOverlay">
+        <div style="background:rgba(10,16,34,.65); padding:10px 14px; border-radius:10px; border:1px solid rgba(124,200,255,.35)">
+          Tap the game to start
+        </div>
       </div>
+      <iframe id="gameFrame" title="Flappy Bara" allow="autoplay; gamepad *; fullscreen *"></iframe>
     </section>
   </div>
 
@@ -133,33 +141,25 @@
   <script type="module">
     import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-    /* --- Debug helpers (single copy). Leave DEBUG=false for production. --- */
+    /* --- Debug helpers (optional) --- */
     const DEBUG = false;
     let __debugBox = null;
-    function ensureDebugBox() {
-      if (!DEBUG) return null;
+    const log = (...args) => {
+      if (!DEBUG) return;
+      console.log("[SM]", ...args);
       if (!__debugBox) {
         const box = document.createElement("div");
         box.id = "debug";
-        box.style.cssText =
-          "position:fixed;left:8px;right:8px;bottom:8px;max-height:36vh;overflow:auto;background:#0b1022dd;border:1px solid #284;padding:8px;border-radius:8px;font:12px/1.4 monospace;z-index:9999;color:#cfe";
+        box.style.cssText = "position:fixed;left:8px;right:8px;bottom:8px;max-height:36vh;overflow:auto;background:#0b1022dd;border:1px solid #284;padding:8px;border-radius:8px;font:12px/1.4 monospace;z-index:9999;color:#cfe";
         box.innerHTML = "<b>Debug</b> — token & score flow logs";
         document.body.appendChild(box);
         __debugBox = box;
       }
-      return __debugBox;
-    }
-    function log(...args) {
-      if (!DEBUG) return;
-      const box = ensureDebugBox();
-      if (box) {
-        const p = document.createElement("div");
-        p.textContent = args.map(String).join(" ");
-        box.appendChild(p);
-        box.scrollTop = box.scrollHeight;
-      }
-      console.log("[SM]", ...args);
-    }
+      const p = document.createElement("div");
+      p.textContent = args.map(String).join(" ");
+      __debugBox.appendChild(p);
+      __debugBox.scrollTop = __debugBox.scrollHeight;
+    };
 
     /* --- Config --- */
     const SUPABASE_URL = "https://bncmbgjnelhythdhsefk.supabase.co";
@@ -173,6 +173,7 @@
     const sendOtpBtn   = document.getElementById("sendOtp");
     const verifyOtpBtn = document.getElementById("verifyOtp");
     const gameFrame    = document.getElementById("gameFrame");
+    const tapOverlay   = document.getElementById("tapOverlay");
 
     /* --- Supabase client --- */
     const sb = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
@@ -202,7 +203,7 @@
       await refreshUserLabel();
     };
 
-    /* --- Leaderboard (unchanged logic) --- */
+    /* --- Leaderboard --- */
     async function loadBoard() {
       const url = `${SUPABASE_URL}/rest/v1/leaderboard?select=user_id,best_score&order=best_score.desc&limit=10`;
       const res = await fetch(url, {
@@ -250,6 +251,9 @@
       G.best    = 0;
       G.state   = 'WAITING';
       log("minted token", G.token);
+
+      // If we showed the tap overlay, hide it once the game actually starts.
+      hideTapOverlay();
     }
 
     function onScore(n) {
@@ -346,12 +350,83 @@
       wrap("notify_score", (n) => onScore(n));
     }
 
-    // Re-hook on iframe load, then load the game
+    /* === Auto start attempts === */
+    function dispatchBurstOn(el, fwin) {
+      if (!el) return;
+      const E = (type, props={}) => {
+        try { return new fwin.MouseEvent(type, { bubbles:true, cancelable:true, ...props }); }
+        catch { return new MouseEvent(type, { bubbles:true, cancelable:true, ...props }); }
+      };
+      const rect = el.getBoundingClientRect();
+      const cx = rect.left + rect.width/2;
+      const cy = rect.top + rect.height/2;
+      const opts = { clientX: cx, clientY: cy };
+      try {
+        el.dispatchEvent(E('pointerdown', opts));
+        el.dispatchEvent(E('mousedown', opts));
+        el.dispatchEvent(E('mouseup', opts));
+        el.dispatchEvent(E('click', opts));
+        el.dispatchEvent(E('pointerup', opts));
+        if (typeof el.click === 'function') el.click();
+      } catch {}
+    }
+
+    function tryAutoStartIframe() {
+      const f = gameFrame?.contentWindow;
+      if (!f) return false;
+      try {
+        const doc = f.document;
+        if (!doc) return false;
+        const btn = doc.getElementById("run") || doc.querySelector("#start, .start, .run, button");
+        const canvas = doc.querySelector("canvas");
+        const target = btn || canvas;
+        if (target) {
+          dispatchBurstOn(target, f);
+          try { canvas && canvas.focus && canvas.focus(); } catch {}
+          return true;
+        }
+      } catch {}
+      return false;
+    }
+
+    /* === Pass-through hint for phones === */
+    function showTapOverlay() {
+      if (!tapOverlay) return;
+      tapOverlay.classList.add("show");
+      const onFirstPointer = (ev) => {
+        const r = gameFrame.getBoundingClientRect();
+        const inside = ev.clientX >= r.left && ev.clientX <= r.right && ev.clientY >= r.top && ev.clientY <= r.bottom;
+        if (!inside) return; // ignore taps outside game
+        hideTapOverlay();
+        window.removeEventListener("pointerdown", onFirstPointer, true);
+      };
+      window.addEventListener("pointerdown", onFirstPointer, true);
+    }
+    function hideTapOverlay() {
+      if (!tapOverlay) return;
+      tapOverlay.classList.add("fade");
+      setTimeout(() => { tapOverlay.remove(); }, 200);
+    }
+
+    // When the iframe loads, try to auto-start (works on desktop); on touch devices, show hint immediately.
     if (gameFrame) {
+      const IS_TOUCH = (('ontouchstart' in window) || navigator.maxTouchPoints > 0 || window.matchMedia?.('(pointer: coarse)').matches);
+      if (IS_TOUCH) showTapOverlay(); // phones need one real tap
+
       gameFrame.addEventListener("load", () => {
         hookIframeConsole();
         hookIframeGlobals();
+
+        // keep trying a few frames (helps some pygbag builds on desktop)
+        const t0 = performance.now();
+        const tick = () => {
+          if (tryAutoStartIframe()) return;
+          if (performance.now() - t0 < 2000) requestAnimationFrame(tick);
+        };
+        tick();
       });
+
+      // Load the game page (same-origin)
       gameFrame.src = "build/web/index.html";
     } else {
       console.warn('No <iframe id="gameFrame"> found on the page.');
