--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <!-- Supabase + game wiring -->
   <script type="module">
     import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
-
+  
     /* --- Debug helpers (optional) --- */
     const DEBUG = false;
     let __debugBox = null;
@@ -157,11 +157,11 @@
       __debugBox.appendChild(p);
       __debugBox.scrollTop = __debugBox.scrollHeight;
     };
-
+  
     /* --- Config --- */
     const SUPABASE_URL = "https://bncmbgjnelhythdhsefk.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJuY21iZ2puZWxoeXRoZGhzZWZrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY2NjcxMDksImV4cCI6MjA3MjI0MzEwOX0.f9j3ExPfDIS3L_Jpg_kzxR-rXpJvTAPHpK6CzGsgOo0";
-
+  
     /* --- DOM --- */
     const emailEl      = document.getElementById("email");
     const otpEl        = document.getElementById("otp");
@@ -171,11 +171,35 @@
     const verifyOtpBtn = document.getElementById("verifyOtp");
     const gameFrame    = document.getElementById("gameFrame");
     const tapOverlay   = document.getElementById("tapOverlay");
-
+  
     /* --- Supabase client --- */
     const sb = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
     window.sb = sb;
-
+  
+    /* === Option B: support BOTH Magic Link and 6-digit OTP === */
+    async function handleSupabaseMagicLink() {
+      // Supabase puts tokens in the URL fragment after redirect:  #access_token=...&refresh_token=...
+      const hash = location.hash && location.hash.startsWith('#') ? location.hash.slice(1) : '';
+      if (!hash) return;
+  
+      const frag = new URLSearchParams(hash);
+      const access_token  = frag.get('access_token');
+      const refresh_token = frag.get('refresh_token');
+  
+      if (access_token && refresh_token) {
+        try {
+          await sb.auth.setSession({ access_token, refresh_token });
+        } catch (e) {
+          console.warn('[auth] setSession from magic link failed:', e);
+        } finally {
+          // Clean tokens out of the URL bar
+          history.replaceState({}, '', location.pathname + location.search);
+        }
+      }
+    }
+    // Run this BEFORE any getSession/UI reads
+    await handleSupabaseMagicLink();
+  
     /* --- Auth label --- */
     async function refreshUserLabel() {
       const { data: { user } } = await sb.auth.getUser();
@@ -184,12 +208,12 @@
     await sb.auth.getSession().catch(()=>{});
     await refreshUserLabel();
     sb.auth.onAuthStateChange(() => { refreshUserLabel(); });
-
+  
     /* --- Email OTP flow --- */
     sendOtpBtn.onclick = async () => {
       const email = emailEl.value.trim();
       const { error } = await sb.auth.signInWithOtp({ email, options: { shouldCreateUser: true } });
-      alert(error ? error.message : "A 6-digit code was emailed to you.");
+      alert(error ? error.message : "A link or a 6-digit code was emailed to you.");
     };
     verifyOtpBtn.onclick = async () => {
       const code = otpEl.value.trim();
@@ -199,7 +223,7 @@
       if (error) alert(error.message);
       await refreshUserLabel();
     };
-
+  
     /* --- Leaderboard --- */
     async function loadBoard() {
       const url = `${SUPABASE_URL}/rest/v1/leaderboard?select=user_id,best_score&order=best_score.desc&limit=10`;
@@ -223,36 +247,36 @@
     }
     window.loadBoard = loadBoard;
     loadBoard();
-
+  
     /* === SCORE FLOW === */
     const MIN = 1.30; // must match DB trigger/validation
     const tokenFrom = (d) => { if (Array.isArray(d)) d = d[0]; return d?.token ?? d?.id ?? d; };
-
+  
     const G = { state:'IDLE', token:null, startAt:0, best:0, timer:null, lastStart:0 };
     const reset = () => { G.state='IDLE'; G.token=null; G.startAt=0; G.best=0; if (G.timer){clearTimeout(G.timer); G.timer=null;} };
-
+  
     async function onRunStart() {
       const now = Date.now();
       if (now - G.lastStart < 800) return; // debounce bursts
       G.lastStart = now;
       if (G.state !== 'IDLE') return;
-
+  
       const { data:{ user } = {} } = await sb.auth.getUser();
       if (!user) return log("Not signed in");
-
+  
       const { data, error } = await sb.rpc("start_run");
       if (error) { log("start_run error:", error.message || error); return; }
-
+  
       G.token   = tokenFrom(data);
       G.startAt = performance.now();
       G.best    = 0;
       G.state   = 'WAITING';
       log("minted token", G.token);
-
+  
       // If we showed the tap overlay, hide it once the game actually starts.
       hideTapOverlay();
     }
-
+  
     function onScore(n) {
       if (G.state !== 'WAITING') return;
       const s = Number(n) || 0;
@@ -262,28 +286,28 @@
       G.timer = setTimeout(postNow, 250); // quiet period
       log("best =", G.best);
     }
-
+  
     async function postNow() {
       if (G.state !== 'WAITING' || !G.token || G.best <= 0) return;
-
+  
       const { data:{ user } = {} } = await sb.auth.getUser();
       if (!user) { reset(); return; }
-
+  
       // anti-cheat: elapsed >= score × MIN
       const elapsed  = (performance.now() - G.startAt) / 1000;
       const required = G.best * MIN;
       const waitMs   = Math.max(0, Math.ceil((required - elapsed) * 1000));
       if (waitMs) { log("waiting", waitMs, "ms (anti-cheat)"); await new Promise(r=>setTimeout(r, waitMs)); }
-
+  
       G.state = 'POSTING';
       const { error } = await sb.from("scores").insert({ user_id: user.id, token: G.token, score: G.best });
       if (error) { log("insert error:", error.message || error); reset(); return; }
-
+  
       log("insert OK (score =", G.best, ")");
       await loadBoard();
       reset();
     }
-
+  
     // Messages from the game (same-origin)
     window.addEventListener("message", (e) => {
       if (e.origin && e.origin !== location.origin) return;
@@ -292,7 +316,7 @@
       if (m.type === "RUN_START") onRunStart();
       else if (m.type === "SCORE") onScore(m.score);
     }, { capture: true });
-
+  
     // Hook iframe console to translate game logs → messages
     function hookIframeConsole() {
       const f = gameFrame?.contentWindow;
@@ -319,7 +343,7 @@
         console.warn("[SM] hook error:", e.message);
       }
     }
-
+  
     // Also wrap iframe globals if they ever exist
     function hookIframeGlobals() {
       const f = gameFrame?.contentWindow;
@@ -346,7 +370,7 @@
       wrap("notify_run_start", () => onRunStart());
       wrap("notify_score", (n) => onScore(n));
     }
-
+  
     /* === Auto start attempts === */
     function dispatchBurstOn(el, fwin) {
       if (!el) return;
@@ -367,7 +391,7 @@
         if (typeof el.click === 'function') el.click();
       } catch {}
     }
-
+  
     function tryAutoStartIframe() {
       const f = gameFrame?.contentWindow;
       if (!f) return false;
@@ -385,7 +409,7 @@
       } catch {}
       return false;
     }
-
+  
     /* === Pass-through hint for phones === */
     function showTapOverlay() {
       if (!tapOverlay) return;
@@ -404,16 +428,16 @@
       tapOverlay.classList.add("fade");
       setTimeout(() => { tapOverlay.remove(); }, 200);
     }
-
+  
     // When the iframe loads, try to auto-start (works on desktop); on touch devices, show hint immediately.
     if (gameFrame) {
       const IS_TOUCH = (('ontouchstart' in window) || navigator.maxTouchPoints > 0 || window.matchMedia?.('(pointer: coarse)').matches);
       if (IS_TOUCH) showTapOverlay(); // phones need one real tap
-
+  
       gameFrame.addEventListener("load", () => {
         hookIframeConsole();
         hookIframeGlobals();
-
+  
         // keep trying a few frames (helps some pygbag builds on desktop)
         const t0 = performance.now();
         const tick = () => {
@@ -422,12 +446,12 @@
         };
         tick();
       });
-
+  
       // Load the game page (same-origin)
       gameFrame.src = "build/web/index.html";
     } else {
       console.warn('No <iframe id="gameFrame"> found on the page.');
     }
-  </script>
+  </script>  
 </body>
 </html>
