--- a/game/index.html
+++ b/game/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+ <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "227baeece0c24c959606461ae7de2c97"}'></script><!-- End Cloudflare Web Analytics -->
   <meta charset="utf-8" />
   <title>Flappy Bara — Leaderboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
