--- a/game/index.html
+++ b/game/index.html
@@ -15,6 +15,9 @@
     header { padding:16px 20px; display:flex; align-items:center; gap:12px; }
     header h1 { margin:0; font-size:20px; font-weight:700; letter-spacing:.3px; }
     header .tag { font-size:12px; color:var(--muted); }
+    
+    #lb li.me { outline: 2px solid #48a3ff; border-radius: 8px; }
+#lb li .you { margin-left: .4ch; font-weight: 600; color: #8fd0ff; }
 
     /* --- Layout: desktop = 2 columns; mobile = stack with GAME first --- */
     .wrap {
@@ -208,7 +211,11 @@
     }
     await sb.auth.getSession().catch(()=>{});
     await refreshUserLabel();
-    sb.auth.onAuthStateChange(() => { refreshUserLabel(); });
+    sb.auth.onAuthStateChange(() => {
+  refreshUserLabel();
+  loadBoard();   // make sure this is here so the label updates after sign-in
+});
+
   
     /* --- Email OTP flow --- */
     sendOtpBtn.onclick = async () => {
@@ -227,25 +234,71 @@
   
     /* --- Leaderboard --- */
     async function loadBoard() {
-      const url = `${SUPABASE_URL}/rest/v1/leaderboard?select=user_id,best_score&order=best_score.desc&limit=10`;
-      const res = await fetch(url, {
-        headers: { apikey: SUPABASE_ANON_KEY, Authorization: `Bearer ${SUPABASE_ANON_KEY}` }
-      });
-      const rows = await res.json();
-      lbEl.innerHTML = "";
-      if (!rows.length) {
-        const li = document.createElement("li"); li.className="muted";
-        li.innerHTML = `<span>No scores yet — be the first!</span><strong>—</strong>`;
-        lbEl.appendChild(li);
-        return;
-      }
-      rows.forEach((r,i)=>{
-        const li = document.createElement("li");
-        const short = r.user_id.slice(0,8) + "…" + r.user_id.slice(-4);
-        li.innerHTML = `<span>#${i+1} ${short}</span><strong>${r.best_score}</strong>`;
-        lbEl.appendChild(li);
-      });
-    }
+  // who am I?
+  const { data: { user } } = await sb.auth.getUser();
+  const meId = (user?.id ?? "").toString().trim().toLowerCase();
+
+  const headers = { apikey: SUPABASE_ANON_KEY, Authorization: `Bearer ${SUPABASE_ANON_KEY}` };
+
+  // top 10
+  const res = await fetch(
+    `${SUPABASE_URL}/rest/v1/leaderboard?select=user_id,best_score&order=best_score.desc&limit=10`,
+    { headers }
+  );
+  const rows = await res.json();
+
+  // also fetch my own best (fallback row if I'm not in top 10)
+  let myBest = null;
+  if (meId) {
+    const meRes = await fetch(
+      `${SUPABASE_URL}/rest/v1/leaderboard?select=user_id,best_score&user_id=eq.${meId}`,
+      { headers }
+    );
+    const meRows = await meRes.json();
+    myBest = meRows?.[0] || null;
+  }
+
+  lbEl.innerHTML = "";
+  if (!rows.length) {
+    const li = document.createElement("li"); li.className = "muted";
+    li.innerHTML = `<span>No scores yet — be the first!</span><strong>—</strong>`;
+    lbEl.appendChild(li);
+    return;
+  }
+
+  // robust id compare (case-insensitive, ignore dashes)
+  const sameId = (a, b) => {
+    const norm = (x) => (x ?? "").toString().trim().toLowerCase().replace(/-/g, "");
+    return norm(a) === norm(b);
+  };
+
+  let meShown = false;
+
+  rows.forEach((r, i) => {
+    const li = document.createElement("li");
+    const isMe = meId && sameId(r.user_id, meId);
+    const uid = String(r.user_id);
+    const short = uid.slice(0, 8) + "…" + uid.slice(-4);
+
+    li.innerHTML =
+      `<span>#${i + 1} ${short}${isMe ? ' <span class="you">(you)</span>' : ''}</span>` +
+      `<strong>${r.best_score}</strong>`;
+
+    if (isMe) { li.classList.add("me"); meShown = true; }
+    lbEl.appendChild(li);
+  });
+
+  // If I'm not in top 10, show my own row at the bottom
+  if (meId && !meShown) {
+    const li = document.createElement("li");
+    li.className = "me";
+    const shortMe = meId.slice(0, 8) + "…" + meId.slice(-4);
+    const score = myBest?.best_score ?? "—";
+    li.innerHTML = `<span>Your best ${shortMe} <span class="you">(you)</span></span><strong>${score}</strong>`;
+    lbEl.appendChild(li);
+  }
+}
+    
     window.loadBoard = loadBoard;
     loadBoard();
   
